--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+#Options -Indexes -MultiViews +FollowSymLinks
+
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.php -f
