--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,16 @@ RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html
 
 ErrorDocument 404 /404.html
+
+#C2ONFIGURACION DB
+SetEnv DB_HOST "190.146.2.30"
+SetEnv DB_USER "root"
+SetEnv DB_PASS "srg789sd"
+SetEnv DB_DB "bocetos_tym"
+SetEnv DB_PREX "tym"
+SetEnv EMAIL_USER "app@eventos.center"
+SetEnv EMAIL_PASS ",HZr*A~i9(wa"
+SetEnv EMAIL_HOST "mail.eventos.center"
+SetEnv APP_NAME "TYM"
+SetEnv APP_ADMIN_EMAIL "michaelrojas@progracol.com"
+SetEnv APP_ADMIN_NAME "Cesar Rojas"
